objects/ESC_Case_Feedback__c.object
<CustomObject>
    <description>Custom object to store the CSAT survey response against case</description>
    <fields>
        <fullName>ESC_Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Bookmarkthelink__c</fullName>
        <label>Bookmark the link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Case</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Feedbacks</relationshipLabel>
        <relationshipName>Case_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Feedbacks</relationshipLabel>
        <relationshipName>Case_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_Effort_Rating__c</fullName>
        <description>Customer rating on the effort they spent to resolve their case</description>
        <label>Effort Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Disagree</fullName>
                </value>
                <value>
                    <fullName>Neither Agree nor Disagree</fullName>
                </value>
                <value>
                    <fullName>Somewhat Agree</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Is_Query_Resolved__c</fullName>
        <label>Is Query Resolved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Question_5__c</fullName>
        <description>Place holder for additional question in click tools</description>
        <label>Question 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Question_6__c</fullName>
        <description>Place holder for additional question in click tools</description>
        <label>Question 6</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Question_7__c</fullName>
        <description>Place holder for additional question in click tools</description>
        <label>Question 7</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Rating__c</fullName>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Response_Time_Indicator__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Time Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Translated_Comment__c</fullName>
        <description>Place holder for translated comment</description>
        <label>Translated Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_User_Comments__c</fullName>
        <label>TR Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Case Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{00000000}</displayFormat>
        <label>Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>